--- a/pages/chatBoard.html
+++ b/pages/chatBoard.html
@@ -54,7 +54,7 @@ h3{
   color: white;
   padding: 4px 116.5px;
   margin-left: 18%;
-  margin-bottom: 0%;
+  margin-top: -2%;
  
 }
 
@@ -86,6 +86,7 @@ select{
   font-family: 'Fredericka the Great', cursive;
   color: white;
   resize: none;
+  padding-top: -2px;
 }
 
 .input-box3{
