--- a/pages/chatBoard.html
+++ b/pages/chatBoard.html
@@ -53,7 +53,7 @@ h3{
   border: none;
   color: white;
   padding: 4px 116.5px;
-  margin-left: 18%;
+  margin-left: 18.3%;
   margin-top: -2%;
  
 }
@@ -81,26 +81,29 @@ select{
 
 .input-box{
   height: 900px;
-  width: 1400px;
+  width: 850px;
   background-image: url('https://user-images.githubusercontent.com/42160652/89743160-43626100-da6e-11ea-8888-80aae91702a2.jpeg');
   font-family: 'Fredericka the Great', cursive;
   color: white;
   resize: none;
   padding-top: -2px;
+  margin-right: 1%;
 }
 
 .input-box3{
 
   background-image: gray;
   font-family: 'Fredericka the Great', cursive;
-  margin-left: 79.14%;
-  width: 350px;
+  margin-left: 70%;
+  width: 520px;
+  height: 55px;
   resize: none;
 }
 
 
 .input-box2{
-  width: 350px;
+  margin-left: 2%;
+  width: 850px;
   height: 900px;
   resize: none;
 }
