--- a/pages/getQuestionsStudents.html
+++ b/pages/getQuestionsStudents.html
@@ -101,7 +101,7 @@ div > .iconImage{
  
 
 
-  <script defer script="script.js"></script>
+  <script defer script="getQuestions.js"></script>
 <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   
 </div>
