--- a/pages/answerOpenEnded.html
+++ b/pages/answerOpenEnded.html
@@ -160,7 +160,7 @@ textarea{
  <button type="button"> Next Question </button> 
 </div>
 
-<script src="script.js"></script>
+<script src="enterResponse.js"></script>
 
   </body>
 </html>
