--- a/pages/getRespones/getRespones.html
+++ b/pages/getRespones/getRespones.html
@@ -82,8 +82,7 @@ div > .iconImage{
     </style>
  
   <body>
-    <script src="script.js">
-    </script>
+
     <h1> Get Student Respones  </h1>
 
 
@@ -102,7 +101,7 @@ div > .iconImage{
 
 
   
-
+<script src="getReq.js">
   
 </div>
   </body>
