--- a/pages/answerFRQ/answerOpenEnded.html
+++ b/pages/answerFRQ/answerOpenEnded.html
@@ -139,7 +139,7 @@ textarea{
 
     <label>Enter the Session ID: &nbsp; </label>  <input type="text" class ="input-box" id="id2" placeholder="Session ID" name="pword" size="44"/>
     <label>Enter Your Username: &nbsp; </label>  <input type="text" class ="input-box" id="id3" placeholder="Username" name="pword" size="44"/>
-
+    <label>Enter the Question Number: &nbsp; </label>  <input type="text" class ="input-box" id="id4" placeholder="Question Number" name="pword" size="44"/>
 
 <br>
 <br>
